<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dip">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvCreateUserUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_username_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etCreateUserUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/create_user_username_hint"
            android:inputType="text"
            android:layout_alignBaseline="@+id/tvCreateUserUsername"
            android:layout_toRightOf="@+id/tvCreateUserUsername" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvCreateUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_name_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etCreateUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/create_user_name_hint"
            android:inputType="text"
            android:layout_alignBaseline="@+id/tvCreateUserName"
            android:layout_toRightOf="@+id/tvCreateUserName" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvCreateUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_email_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etCreateUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:inputType="textEmailAddress"
            android:hint="@string/create_user_email_hint"
            android:layout_alignBaseline="@+id/tvCreateUserEmail"
            android:layout_toRightOf="@+id/tvCreateUserEmail" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff99ffa0"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="10dip"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvCreateUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_password_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etCreateUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/create_user_password_hint"
            android:inputType="textPassword"
            android:layout_alignBaseline="@+id/tvCreateUserPassword"
            android:layout_toRightOf="@+id/tvCreateUserPassword" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvCreateUserPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_password2_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etCreateUserPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/create_user_password_hint"
            android:inputType="textPassword"
            android:layout_alignBaseline="@+id/tvCreateUserPassword2"
            android:layout_toRightOf="@+id/tvCreateUserPassword2" />

    </RelativeLayout>

    <Button
        android:id="@+id/createUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/create_user_btn"
        android:onClick="createUser"/>

</LinearLayout>