<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dip"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estos son los campos que puedes cambiar:"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="15dip"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvUpdateUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_name_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etUpdateUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/create_user_name_hint"
            android:inputType="text"
            android:layout_alignBaseline="@+id/tvUpdateUserName"
            android:layout_toRightOf="@+id/tvUpdateUserName" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvUpdateUserAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_age_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etUpdateUserAge"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:inputType="number"
            android:layout_alignBaseline="@+id/tvUpdateUserAge"
            android:layout_toRightOf="@+id/tvUpdateUserAge" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">

        <TextView
            android:id="@+id/tvUpdateUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_email_tv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etUpdateUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:inputType="textEmailAddress"
            android:hint="@string/create_user_email_hint"
            android:layout_alignBaseline="@+id/tvUpdateUserEmail"
            android:layout_toRightOf="@+id/tvUpdateUserEmail" />

    </RelativeLayout>

    <Button
        android:id="@+id/updateUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/update_user_btn"
        android:onClick="updateUser"
        android:layout_gravity="bottom" />
    <Button
        android:id="@+id/btnCaptura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="¿Quieres añadir una foto?" />

    <ImageView
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:id="@+id/imagen"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.24" />


</LinearLayout>