<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:layout_margin="20dip">

        <TextView
            android:id="@+id/TextName"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvNameEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:layout_margin="20dip">

        <TextView
            android:id="@+id/DateInitial"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/dateInitial"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvDateInitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:layout_margin="20dip">

        <TextView
            android:id="@+id/DateFinish"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/dateFinish"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvDateFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="cancel"
            android:text="@string/lb_cancel" />

        <Button
            android:id="@+id/bSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="putEvent"
            android:text="@string/lb_edit" />
    </LinearLayout>

</LinearLayout>