<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dip">

    <TextView
        android:id="@+id/tvDetailUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvDetailContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDetailLike"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/like"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvDetailLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/like_count"/>

        <ImageView
            android:id="@+id/imgDetailLike"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/likebutton"
            android:layout_marginRight="8dip"
            android:onClick="likeComment"/>

        <ImageView
            android:id="@+id/imgDetailDislike"
            android:layout_width="53dp"
            android:layout_height="65dp"
            android:src="@drawable/maxresdefault"
            android:layout_marginLeft="8dip"
            android:onClick="dislikeComment"/>

        <TextView
            android:id="@+id/tvDetailDislikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dislike_count"/>

        <TextView
            android:id="@+id/tvDetailDislike"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dislike"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>