<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#AAAAAA">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="600dp"


        android:background="@drawable/fondoeventospneumamusicacordoba">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dip"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="107dp"
                android:src="@drawable/login"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/lUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_l_username"
                android:textStyle="italic"
                android:textColor="#FF4400"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="330dp"
                android:layout_height="45dp"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#ffd2271d"
                android:hint="Username"
                android:background="#ffafadb0"
                android:layout_weight="0.04" />


            <TextView
                android:id="@+id/lPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_l_password"
                android:textStyle="italic"
                android:textColor="#FF4400"/>

            <EditText
                android:id="@+id/etPassword"
                android:gravity="center"
                android:layout_width="330dp"
                android:layout_height="45dp"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#ffd22123"
                android:background="#ffafadb0"
                android:hint="Password"
                android:layout_weight="0.05" />



            <Button
                android:id="@+id/bLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:onClick="signIn"
                android:text="@string/login_l_signin"
                android:background="#8ffff5e7"
                android:textColor="#FFAA20"
                android:textStyle="bold|italic"
                android:textSize="20dip"
                android:layout_weight="0.08" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="50dip">

                <TextView
                    android:id="@+id/lLinkRegister"
                    android:layout_width="148dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="60dip"
                    android:layout_marginLeft="10dip"
                    android:clickable="true"
                    android:onClick="register"
                    android:gravity="center"
                    android:text="Regístrate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ff7fadff"
                    android:background="#f02a2c2f"
                    android:autoText="false" />


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>